--- a/Server/Pages/LoginRegister/Register.cshtml
+++ b/Server/Pages/LoginRegister/Register.cshtml
@@ -9,7 +9,7 @@
 }
 <script src="_framework/blazor.server.js"></script>
 <h3 class="display-4 text-center mb-4">CREATE AN ACCOUNT</h3>
-<component type="typeof(DocsWASM.Pages.LoginRegister.Register)" render-mode="Server" param-ipAdress="Model.ipAdress" param-userAgent="Model.userAgent" />
+<component type="typeof(DocsWASM.Server.Pages.LoginRegister.Register)" render-mode="Server" param-ipAdress="Model.ipAdress" param-userAgent="Model.userAgent" />
 <style>
 	.validation-message {
 		color: darkred;
